All work filter
Location > all location pre selected
Person > all person pre selected
Service > IAC
Bring the Reset button back

--- a/app/views/workallocation/pages/wa-allwork.html
+++ b/app/views/workallocation/pages/wa-allwork.html
@@ -50,7 +50,7 @@ My work
                 <p class="govuk-heading-m">Location</p>
                 <div class="govuk-radios" >
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="person" name="bob" type="radio" value="/workallocation/pages/wa-allwork" >
+                    <input class="govuk-radios__input" id="person" name="bob" type="radio" value="/workallocation/pages/wa-allwork" checked>
                     <label class="govuk-label govuk-radios__label" for="where-do-you-live">
                       All
                     </label>
@@ -89,7 +89,7 @@ My work
                   </label>
                   <div class="govuk-radios">
                     <div class="govuk-radios__item">
-                      <input class="govuk-radios__input" id="person" name="bob" type="radio" value="/workallocation/pages/wa-allwork" >
+                      <input class="govuk-radios__input" id="person" name="bob" type="radio" value="/workallocation/pages/wa-allwork" checked>
                       <label class="govuk-label govuk-radios__label" for="where-do-you-live">
                         All
                       </label>
@@ -140,9 +140,9 @@ My work
                 <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
                   Apply
                 </button>
-                <!-- <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                   Reset to default
-                </button> -->
+                </button>
               </div>
             </div>
           </div>
