Updated the index page to show the link when no task assign

--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -69,6 +69,8 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-service?usertype=judiciary&">Filter open - Error - Services not selected</a></p>
         <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-location?usertype=judiciary&">Filter open - Error - Location not selected</a></p>
         <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-types-of-work?usertype=judiciary&">Filter open - Error - Types of work not selected</a></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-mytasks-no-task?usertype=judiciary&">Filter close - Info message - No task selected</a></p>
+
 
 
         <div class="govuk-!-padding-bottom-9"></div>
@@ -349,6 +351,8 @@ GOV.UK Prototype Kit
       <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-service?usertype=staff&">Filter open - Error - Services not selected</a></p>
       <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-location?usertype=staff&">Filter open - Error - Location not selected</a></p>
       <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-types-of-work?usertype=staff&">Filter open - Error - Types of work not selected</a></p>
+      <p><a target="_blank" href="/workallocation/pages/wa-mytasks-no-task?usertype=staff&">Filter close - Info message - No task selected</a></p>
+
     <div class="govuk-!-padding-bottom-9"></div>
     <!-- SECTION BREAK -->
 
