--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -29,9 +29,9 @@ Case details
                     <h1 class="govuk-panel__title">
 
                         {% if data.adminonly == 'true' %}
-                        Notice of change request successful<br><br>
+                        Notice of change successful<br><br>
                         <div class="govuk-panel__body">
-                            The case is not shared with anyone
+                            Case 111-222-333-444 is not shared with anyone
                         </div>
                         {% else %}
                         Notice of change successful<br><br>
