Added role type and one small copy change

--- a/app/views/workallocation/pages/wa-allwork.html
+++ b/app/views/workallocation/pages/wa-allwork.html
@@ -106,6 +106,16 @@ My work
                         Specific person
                       </label>
                     </div>
+                    <label class="govuk-heading-m" for="sort" style="display:none">
+                      Label for Specific person
+                    </label>
+                    <div class="govuk-!-padding-bottom-2"></div>
+                    <select class="govuk-select" id="sort" name="sort" style="width:100%">
+                      <option value="updated" selected>Select role type</option>
+                      <option value="updated">Judiciary</option>
+                      <option value="views">Legal ops tasks</option>
+                      <option value="comments">Admin</option>
+                    </select>
                     <div class="govuk-!-padding-bottom-2"></div>
                     <div class="govuk-form-group">
                       <input class="govuk-input" id="address-town" name="address-town" type="text">
