--- a/app/views/workallocation/pages/wa-show-work-filter-error-trigger.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-error-trigger.html
@@ -16,7 +16,7 @@ My work
       <li>
         <a href="#passport-issued-error">
           <a href="#passport-issued-error">
-            Select a service, type of work and enter a location
+            Select a service, a type of work and enter a location
           </a>
       </li>
     </ul>
