Changes asked by DPM via an email from Tommy Wong on Wed 20/10/2021 15:33

--- a/app/views/workallocation/pages/wa-PA-00467-2017-hjchk-7days.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-hjchk-7days.html
@@ -55,7 +55,7 @@ Case details
               Duration of role
             </dt>
             <dd class="govuk-summary-list__value">
-              <p class="govuk-body">Indefinite</p>
+              <p class="govuk-body">7 days</p>
 
             </dd>
             <dd class="govuk-summary-list__actions">
