--- a/app/views/workallocation/pages/wa-PA-00467-2017-noj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-noj.html
@@ -46,7 +46,7 @@ Case details
       </li>
        <li class="govuk-tabs__list-item--selected">
         <a class="govuk-tabs__tab" href="#">
-          Roles and access
+          <strong>Roles and access</strong>
         </a>
       </li>
       <li class="govuk-tabs__list-item">
