--- a/app/views/workallocation/pages/wa-available-tasks.html
+++ b/app/views/workallocation/pages/wa-available-tasks.html
@@ -16,7 +16,7 @@ My work
 {{ govukButton({
   text: "Show work filter",
   classes: "govuk-button--secondary",
-  href: "wa-available-tasks-wf"
+  href: ""
 }) }}
 <div class="hmcts-scrollable-pane">
   <div class="hmcts-scrollable-pane__wrapper">
