--- a/app/views/workallocation/pages/wa-show-work-filter-add-1.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-add-1.html
@@ -65,7 +65,7 @@ My work
           <label class="govuk-body" for="location-picker">
             Search for a location by name
           </label>
-          <select id="location-picker" name="locationPicker" autofocus>
+          <select id="location-picker" name="locationPicker">
             <option value=" " {% if data.locationPicker == ' ' %} selected {% endif %}> </option>
             <option value="Birmingham Civil and Family Justice Centre" {% if data.locationPicker == 'Birmingham Civil and Family Justice Centre' %} selected {% endif %}>Birmingham Civil and Family Justice Centre</option>
             <option value="Bradford Tribunal Hearing Centre" {% if data.locationPicker == 'Bradford Tribunal Hearing Centre' %} selected {% endif %}>Bradford Tribunal Hearing Centre</option>
