--- a/app/views/workallocation/pages/wa-PA-00467-2017-alor-lo.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-alor-lo.html
@@ -161,7 +161,7 @@ Case details
 
         </tbody>
     </table>
-    <p><a href="#" class="govuk-link">Allocate a role</a></p>
+    <!-- <p><a href="#" class="govuk-link">Allocate a role</a></p> -->
     <p><a href="#" class="govuk-link"></a></p>
         <h2 class="govuk-heading-m">Exclusions</h2>
         <dl class="govuk-summary-list">
