Changes asked by DPM via an email from Tommy Wong on Wed 20/10/2021 15:33

--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -154,6 +154,8 @@ GOV.UK Prototype Kit
         <div class="xui-alert-link__number">6 </div>
         <div class="govuk-!-padding-bottom-6"></div>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar-fpj?usertype=judiciary&">Roles and access - Allocate a role (IAC)</a><br>Checked with DS - v3.3</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar-fpj-no-link?usertype=judiciary&">Roles and access (No manage and allocate link)- Allocate a role (IAC)</a><br>Checked with DS - v3.3</p>
+
   <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-fpj?usertype=judiciary&">Roles and access - Allocate a judicial role - Choose a role (IAC)</a><br>Checked with DS - v3.4 - updated H1s</p>
   <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh-fpj?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Choose how to allocate... (IAC)</a><br>Checked with DS - v3.4 - updated H1s </p>
   <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha-fpj?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Find the judge (IAC)</a><br>Checked with DS - v3.4  - updated H1s</p>
@@ -292,7 +294,7 @@ GOV.UK Prototype Kit
   <p><a target="_blank" href="/workallocation/pages/cancel-task?usertype=judiciary&">Cancel a task</a><br>Updated to email from Sharon W 27 July 2021</p>
     <p><a target="_blank" href="/workallocation/pages/unassign-task?usertype=judiciary&">Unassign a task</a><br>Updated to email from Sharon W 27 July 2021</p>
   <p><a target="_blank" href="/workallocation/pages/wa-allwork-none-o?usertype=judiciary&">Launch page - unassigned</a><br>Updated to email from Sharon W 27 July 2021</p>
-  <p><a target="_blank" href="/workallocation/pages/assign-task-start?usertype=judiciary&">Assign a task</a><br>Checked with v3.4  - updated H1s</p>
+  <p><a target="_blank" href="/workallocation/pages/assign-task-start-a?usertype=judiciary&">Assign a task</a><br>Checked with v3.4  - updated H1s</p>
   </div>
 
 
@@ -437,6 +439,7 @@ GOV.UK Prototype Kit
     <div class="xui-alert-link__number">6 </div>
     <div class="govuk-!-padding-bottom-6"></div>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar-fpjl?usertype=staff&">Roles and access - Allocate a role (IAC)</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar-fpj-no-link?usertype=staff&">Roles and access (No manage and allocate link)- Allocate a role (IAC)</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-fpjl?usertype=staff&">Roles and access - Allocate a judicial role - Choose a role (IAC)</a><br>Checked with DS - v3.4  - updated H1s</p>
   <!--  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh-fpjl?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Choose how to allocate... (IAC)</a><br>Checked with DS - v3.3 </p>
   -->  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha-fpjl?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Find the judge (IAC)</a><br>Checked with DS - v3.4  - updated H1s</p>
