--- a/app/views/workallocation/pages/wa-allwork-none-o.html
+++ b/app/views/workallocation/pages/wa-allwork-none-o.html
@@ -169,7 +169,7 @@ My work
               </tr>
               <tr class="govuk-table__row">
 
-                <td colspan="8" class="right"><a href="#" class="right">Mark as done</a> <a href="#" class="right">Cancel task</a> <a href="assign-task" class="right">Assign</a>  <a href="#" class="#">Go to tasks</a></td>
+                <td colspan="8" class="right"><a href="#" class="right">Mark as done</a> <a href="#" class="right">Cancel task</a> <a href="assign-task-start-a" class="right">Assign</a>  <a href="#" class="#">Go to tasks</a></td>
               </tr>
 
               <tr class="govuk-table__row">
