--- a/app/views/workallocation/pages/wa-allwork-sp-o.html
+++ b/app/views/workallocation/pages/wa-allwork-sp-o.html
@@ -204,7 +204,7 @@ My work
               </tr>
               <tr class="govuk-table__row">
 
-                <td colspan="8" class="right"><a href="mark-as-done" class="right">Mark as done</a> <a href="cancel-task" class="right">Cancel task</a> <a href="reassign-t" class="right">Reassign</a> <a href="unassign-task" class="right">Unassign</a> <a href="#" class="right_tl">Go to tasks</a></td>
+                <td colspan="8" class="right"><a href="mark-as-done" class="right">Mark as done</a> <a href="cancel-task" class="right">Cancel task</a> <a href="reassign-start" class="right">Reassign</a> <a href="unassign-task" class="right">Unassign</a> <a href="#" class="right_tl">Go to tasks</a></td>
               </tr>
 
             </tbody>
