--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajhn.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajhn.html
@@ -13,7 +13,7 @@ Case details
 
 <h1 class="govuk-heading-l">
   <span class="govuk-caption-l">Allocate a hearing judge</span>
-    Choose how to allocate the judicial role
+  Choose who to allocate the role to
 </h1>
 <div class="govuk-width-container">
   <div class="govuk-grid-row">
