--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -10,7 +10,7 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (29/07/21)
+      Last updated (27/10/21)
     </h2>
     <p> My tasks & Available tasks, 'Due date' replaced by 'Task created'<br> for Judicial users only(3.4)</p>
     <p> Updated Active tasks (3.4) </p>
@@ -69,7 +69,7 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-service?usertype=judiciary&">Filter open - Error - Services not selected</a></p>
         <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-location?usertype=judiciary&">Filter open - Error - Location not selected</a></p>
         <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-types-of-work?usertype=judiciary&">Filter open - Error - Types of work not selected</a></p>
-        <p><a target="_blank" href="/workallocation/pages/wa-mytasks-no-task?usertype=judiciary&">Filter close - Info message - No task selected</a></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-mytasks-no-task?usertype=judiciary&">Filter close - Info message - No task selected</a><br>(On user logon)</p>
 
 
 
@@ -353,7 +353,7 @@ GOV.UK Prototype Kit
       <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-service?usertype=staff&">Filter open - Error - Services not selected</a></p>
       <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-location?usertype=staff&">Filter open - Error - Location not selected</a></p>
       <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-types-of-work?usertype=staff&">Filter open - Error - Types of work not selected</a></p>
-      <p><a target="_blank" href="/workallocation/pages/wa-mytasks-no-task?usertype=staff&">Filter close - Info message - No task selected</a></p>
+      <p><a target="_blank" href="/workallocation/pages/wa-mytasks-no-task?usertype=staff&">Filter close - Info message - No task selected</a><br>(On user logon)</p>
 
     <div class="govuk-!-padding-bottom-9"></div>
     <!-- SECTION BREAK -->
