--- a/app/views/workallocation/pages/wa-allwork-sp-o-a.html
+++ b/app/views/workallocation/pages/wa-allwork-sp-o-a.html
@@ -187,7 +187,7 @@ My work
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
-              <tr class="govuk-table__row">
+              <!-- <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="#">Hudson Remi</a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Protection</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff" >Taylor House</td>
@@ -205,7 +205,7 @@ My work
               <tr class="govuk-table__row">
 
                 <td colspan="8" class="right"><a href="mark-as-done" class="right">Mark as done</a> <a href="cancel-task" class="right">Cancel task</a> <a href="reassign-start-a" class="right">Reassign</a> <a href="unassign-task" class="right">Unassign</a> <a href="#" class="right_tl">Go to tasks</a></td>
-              </tr>
+              </tr> -->
 
             </tbody>
           </table>
