--- a/app/views/workallocation/pages/wa-mytasks-ao.html
+++ b/app/views/workallocation/pages/wa-mytasks-ao.html
@@ -71,7 +71,7 @@ My work
           <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-a" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
         </tr>  <tr class="govuk-table__row">
 
-            <td colspan="7" class="right"> <a href="reassign-start" class="right">Reassign</a> <a href="lms" class="right">Unassign</a> <a href="wa-lms-t" class="right_tl">Go to tasks</a></td>
+            <td colspan="7" class="right"> <a href="reassign-start-b" class="right">Reassign</a> <a href="lms" class="right">Unassign</a> <a href="wa-lms-t" class="right_tl">Go to tasks</a></td>
           </tr>
 
         <tr class="govuk-table__row">
