--- a/app/views/workallocation/pages/wa-myaccess-new-s-v.html
+++ b/app/views/workallocation/pages/wa-myaccess-new-s-v.html
@@ -43,7 +43,7 @@ My work
         </li>
       </ul>
     </nav>
-    <p class="govuk-body">Displaying <strong>1</strong> of <strong>1</strong> cases </p>
+    <!-- <p class="govuk-body">Displaying <strong>1</strong> of <strong>1</strong> cases </p> -->
     <table class="govuk-table ">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
