--- a/app/views/workallocation/pages/wa-mycases-new-v.html
+++ b/app/views/workallocation/pages/wa-mycases-new-v.html
@@ -44,7 +44,7 @@ My work
       </ul>
     </nav>
   </div>
-  <p class="govuk-body">Displaying <strong>3</strong> of <strong>3</strong> cases </p>
+  <!-- <p class="govuk-body">Displaying <strong>3</strong> of <strong>3</strong> cases </p> -->
   <table class="govuk-table ">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
