Changes asked by DPM via an email from Tommy Wong on Wed 20/10/2021 15:33
Location filter updated for All Work section as per Tommy session on 28th Oct

--- a/app/views/workallocation/pages/wa-allwork.html
+++ b/app/views/workallocation/pages/wa-allwork.html
@@ -47,7 +47,7 @@ My work
                   <option value="comments">Value</option>
                 </select>
                 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-                <p class="govuk-heading-m">Location</p>
+                <p class="govuk-heading-m">Select a location</p>
                 <div class="govuk-radios" >
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="person" name="bob" type="radio" value="/workallocation/pages/wa-allwork" checked>
@@ -154,8 +154,8 @@ My work
                   Reset to default
                 </button>
               </div>
-            </div>
           </div>
+        </div>
         <div class="hmcts-filter-layout__content">
           <p class="govuk-body">Displaying <strong>7</strong> of <strong>7</strong> tasks</p>
           <table class="govuk-table ">
