--- a/app/views/workallocation/pages/wa-allwork-cases-jb.html
+++ b/app/views/workallocation/pages/wa-allwork-cases-jb.html
@@ -7,11 +7,7 @@
 My work
 {% endblock %}
 {% block content %}
-<style>
-  .govuk-width-container {
-    max-width: 1820px;
-  }
-</style>
+
 <div class="govuk-width-container">
   <div class="hmcts-page-heading">
     <div class="hmcts-page-heading__title">
@@ -57,16 +53,40 @@ My work
   </select>
 <div class="govuk-!-padding-bottom-4"></div>
 
-
-  <label class="govuk-heading-m" for="sort">
-    Case location
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+<p class="govuk-heading-m">Select a location</p>
+<div class="govuk-radios" >
+  <div class="govuk-radios__item">
+    <input class="govuk-radios__input" id="person" name="bob" type="radio" value="/workallocation/pages/wa-allwork">
+    <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+      All
+    </label>
+  </div>
+  <div class="govuk-radios__item">
+    <input class="govuk-radios__input" id="person-3" name="bob" type="radio" value="/workallocation/pages/wa-allwork-sp" checked>
+    <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+      Search for a location
+    </label>
+  </div>
+<div class="govuk-!-padding-bottom-2"></div>
+<div style="width:100%;display:inline-block;">
+  <label class="govuk-body" for="location-picker" style="display:none;">
+    Search for a location by name
   </label>
-  <select class="govuk-select" id="sort" name="sort" style="width:100%">
-    <option value="published">All locations</option>
-    <option value="updated" selected>Taylor House</option>
-    <option value="views">Value</option>
-    <option value="comments">Value</option>
+  <select id="location-picker" name="locationPicker" autofocus style="background-color:white;">
+    <option value="Taylor House Tribunal Hearing Centre" {% if data.locationPicker == 'Taylor House Tribunal Hearing Centre' %} selected {% endif %}>Taylor House Tribunal Hearing Centre</option>
+    <option value="Birmingham Civil and Family Justice Centre" {% if data.locationPicker == 'Birmingham Civil and Family Justice Centre' %} selected {% endif %}>Birmingham Civil and Family Justice Centre</option>
+    <option value="Bradford Tribunal Hearing Centre" {% if data.locationPicker == 'Bradford Tribunal Hearing Centre' %} selected {% endif %}>Bradford Tribunal Hearing Centre</option>
+    <option value="Glasgow Tribunals Centre" {% if data.locationPicker == 'Glasgow Tribunals Centre' %} selected {% endif %}>Glasgow Tribunals Centre</option>
+    <option value="Hatton Cross Tribunal Hearing Centre" {% if data.locationPicker == 'Hatton Cross Tribunal Hearing Centre' %} selected {% endif %}>Hatton Cross Tribunal Hearing Centre</option>
+    <option value="Manchester Tribunal Hearing Centre" {% if data.locationPicker == 'Manchester Tribunal Hearing Centre' %} selected {% endif %}>Manchester Tribunal Hearing Centre</option>
+    <option value="Newcastle Civil & Family Courts and Tribunals Centre" {% if data.locationPicker == 'Newcastle Civil & Family Courts and Tribunals Centre' %} selected {% endif %}>Newcastle Civil & Family Courts and Tribunals Centre</option>
+    <option value="Newport (South Wales) Immigration and Asylum Tribunal" {% if data.locationPicker == 'Newport (South Wales) Immigration and Asylum Tribunal' %} selected {% endif %}>Newport (South Wales) Immigration and Asylum Tribunal</option>
+    <option value="Taylor House Tribunal Hearing Centre" {% if data.locationPicker == 'Taylor House Tribunal Hearing Centre' %} selected {% endif %}>Taylor House Tribunal Hearing Centre</option>
   </select>
+  </div>
+</div>
+
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
   <label class="govuk-heading-m" for="sort">
     Role type
@@ -202,6 +222,14 @@ My work
     if(bobs[i_tem].name==nm&&bobs[i_tem].checked)
     frm.action=bobs[i_tem].value;
     }
+    </script>
+
+    <script type="text/javascript">
+      window.onload = (event) => {
+        accessibleAutocomplete.enhanceSelectElement({
+          selectElement: document.querySelector('#location-picker')
+        })
+      }
     </script>
 
     {% endblock %}
