--- a/app/views/workallocation/pages/wa-allwork-none-o.html
+++ b/app/views/workallocation/pages/wa-allwork-none-o.html
@@ -7,11 +7,6 @@
 My work
 {% endblock %}
 {% block content %}
-<style>
-  .govuk-width-container {
-    max-width: 1820px;
-  }
-</style>
 <div class="govuk-width-container">
   <div class="hmcts-page-heading">
     <div class="hmcts-page-heading__title">
@@ -39,102 +34,126 @@ My work
       </nav>
       <div class="hmcts-filter-layout" >
         <div class="hmcts-filter-layout__filter" style="background-color: #f3f2f1;">
-
           <div class="hmcts-filter__content">
-
-            <div class="hmcts-filter__options" >
-
-
-  <div>
-  <label class="govuk-heading-m" for="sort">
-    Service
-  </label>
-  <select class="govuk-select" id="sort" name="sort" style="width:100%">
-    <option value="published">Value</option>
-    <option value="updated" selected>Immigration and Asylum</option>
-    <option value="views">Value</option>
-    <option value="comments">Value</option>
-  </select>
-<div class="govuk-!-padding-bottom-4"></div>
-
-
-  <label class="govuk-heading-m" for="sort">
-    Case location
-  </label>
-  <select class="govuk-select" id="sort" name="sort" style="width:100%">
-    <option value="published">All locations</option>
-    <option value="updated" selected>Taylor House</option>
-    <option value="views">Value</option>
-    <option value="comments">Value</option>
-  </select>
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  <label class="govuk-heading-m" for="sort">
-    Task type
-  </label>
-  <select class="govuk-select" id="sort" name="sort" style="width:100%">
-    <option value="updated" selected>Judicial tasks</option>
-    <option value="views">Legal ops tasks</option>
-    <option value="comments">Admin</option>
-  </select>
-</div>
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  <form action="#" method="post" onsubmit="usePage(this, 'bob');">
-<div class="govuk-form-group">
-  <fieldset class="govuk-fieldset">
-    <label class="govuk-heading-m" for="sort">
-      Person
-    </label>
-    <div class="govuk-radios" >
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="person" name="bob" type="radio" value="/workallocation/pages/wa-allwork" >
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          All
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="person-2" name="bob" type="radio" value="/workallocation/pages/wa-allwork-none" checked="true">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          None / Available tasks
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="person-3" name="bob" type="radio" value="/workallocation/pages/wa-allwork-sp">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          Specific person
-        </label>
-      </div>
-  <div class="govuk-!-padding-bottom-2"></div>
-      <div class="govuk-form-group">
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="address-town" type="text">
-      </div>
-
-    </div>
-
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
-    <!--
-        <label class="govuk-heading-m" for="sort">
-          Priority
-        </label>
-        <select class="govuk-select" id="sort" name="sort" style="width:100%">
-          <option value="updated" selected>All</option>
-          <option value="views">Urgent (red)</option>
-          <option value="views">Due (yellow)</option>
-          <option value="comments">New (grey)</option>
-        </select>
-    -->
-      </div>
-      <!--
-      <div class="govuk-!-padding-bottom-1"></div>
-    -->
-
-              <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
-                Apply
-              </button>
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Reset to default
-              </button>
-            </div>
+            <div class="hmcts-filter__options">
+              <div>
+                <label class="govuk-heading-m" for="sort">
+                  Service
+                </label>
+                <select class="govuk-select" id="sort" name="sort" style="width:100%">
+                  <option value="published">Value</option>
+                  <option value="updated" selected>Immigration and Asylum</option>
+                  <option value="views">Value</option>
+                  <option value="comments">Value</option>
+                </select>
+                <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+                <p class="govuk-heading-m">Select a location</p>
+                <div class="govuk-radios" >
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="person" name="bob" type="radio" value="/workallocation/pages/wa-allwork">
+                    <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+                      All
+                    </label>
+                  </div>
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="person-3" name="bob" type="radio" value="/workallocation/pages/wa-allwork-sp" checked>
+                    <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+                      Search for a location
+                    </label>
+                  </div>
+                <div class="govuk-!-padding-bottom-2"></div>
+                <div style="width:100%;display:inline-block;">
+                  <label class="govuk-body" for="location-picker" style="display:none;">
+                    Search for a location by name
+                  </label>
+                  <select id="location-picker" name="locationPicker" autofocus style="background-color:white;">
+                    <option value="Taylor House Tribunal Hearing Centre" {% if data.locationPicker == 'Taylor House Tribunal Hearing Centre' %} selected {% endif %}>Taylor House Tribunal Hearing Centre</option>
+                    <option value="Birmingham Civil and Family Justice Centre" {% if data.locationPicker == 'Birmingham Civil and Family Justice Centre' %} selected {% endif %}>Birmingham Civil and Family Justice Centre</option>
+                    <option value="Bradford Tribunal Hearing Centre" {% if data.locationPicker == 'Bradford Tribunal Hearing Centre' %} selected {% endif %}>Bradford Tribunal Hearing Centre</option>
+                    <option value="Glasgow Tribunals Centre" {% if data.locationPicker == 'Glasgow Tribunals Centre' %} selected {% endif %}>Glasgow Tribunals Centre</option>
+                    <option value="Hatton Cross Tribunal Hearing Centre" {% if data.locationPicker == 'Hatton Cross Tribunal Hearing Centre' %} selected {% endif %}>Hatton Cross Tribunal Hearing Centre</option>
+                    <option value="Manchester Tribunal Hearing Centre" {% if data.locationPicker == 'Manchester Tribunal Hearing Centre' %} selected {% endif %}>Manchester Tribunal Hearing Centre</option>
+                    <option value="Newcastle Civil & Family Courts and Tribunals Centre" {% if data.locationPicker == 'Newcastle Civil & Family Courts and Tribunals Centre' %} selected {% endif %}>Newcastle Civil & Family Courts and Tribunals Centre</option>
+                    <option value="Newport (South Wales) Immigration and Asylum Tribunal" {% if data.locationPicker == 'Newport (South Wales) Immigration and Asylum Tribunal' %} selected {% endif %}>Newport (South Wales) Immigration and Asylum Tribunal</option>
+                    <option value="Taylor House Tribunal Hearing Centre" {% if data.locationPicker == 'Taylor House Tribunal Hearing Centre' %} selected {% endif %}>Taylor House Tribunal Hearing Centre</option>
+                  </select>
+                  </div>
+                </div>
+              </div>
+              <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+              <form action="#" method="post" onsubmit="usePage(this, 'bob');">
+                <div class="govuk-form-group">
+                  <fieldset class="govuk-fieldset">
+                  <label class="govuk-heading-m" for="sort">
+                    Person
+                  </label>
+                  <div class="govuk-radios">
+                    <div class="govuk-radios__item">
+                      <input class="govuk-radios__input" id="person" name="bob" type="radio" value="/workallocation/pages/wa-allwork">
+                      <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+                        All
+                      </label>
+                    </div>
+                    <div class="govuk-radios__item">
+                      <input class="govuk-radios__input" id="person-2" name="bob" type="radio" value="/workallocation/pages/wa-allwork-none" checked="true">
+                      <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+                        None / Available tasks
+                      </label>
+                    </div>
+                    <div class="govuk-radios__item">
+                      <input class="govuk-radios__input" id="person-3" name="bob" type="radio" value="/workallocation/pages/wa-allwork-sp-y">
+                      <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+                        Specific person
+                      </label>
+                    </div>
+                    <label class="govuk-heading-m" for="sort" style="display:none">
+                      Label for Specific person
+                    </label>
+                    <div class="govuk-!-padding-bottom-2"></div>
+                    <select class="govuk-select" id="sort" name="sort" style="width:100%">
+                      <option value="updated" selected>Select role type</option>
+                      <option value="updated">Judiciary</option>
+                      <option value="views">Legal ops tasks</option>
+                      <option value="comments">Admin</option>
+                    </select>
+                    <div class="govuk-!-padding-bottom-2"></div>
+                    <div class="govuk-form-group">
+                      <input class="govuk-input" id="address-town" name="address-town" type="text">
+                    </div>
+                  </div>
+                </div>
+                <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+                <div class="govuk-form-group">
+                <label class="govuk-heading-m" for="sort">
+                  Task type
+                </label>
+                <select class="govuk-select" id="sort" name="sort" style="width:100%">
+                  <option value="updated">All</option>
+                  <option value="updated" selected>Judicial tasks</option>
+                  <option value="views">Legal ops tasks</option>
+                  <option value="comments">Admin</option>
+                </select>
+                <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+                </div>
+                <div class="govuk-form-group">
+                <label class="govuk-heading-m" for="sort">
+                  Priority
+                </label>
+                <select class="govuk-select" id="sort" name="sort" style="width:100%">
+                  <option value="updated" selected>All</option>
+                  <option value="views">High (red)</option>
+                  <option value="comments">Medium (yellow)</option>
+                  <option value="comments">Low (green)</option>
+                </select>
+                </div>
+                <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+                <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
+                  Apply
+                </button>
+                <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                  Reset to default
+                </button>
+              </div>
           </div>
         </div>
         <div class="hmcts-filter-layout__content">
@@ -197,6 +216,14 @@ My work
     if(bobs[i_tem].name==nm&&bobs[i_tem].checked)
     frm.action=bobs[i_tem].value;
     }
+    </script>
+
+    <script type="text/javascript">
+      window.onload = (event) => {
+        accessibleAutocomplete.enhanceSelectElement({
+          selectElement: document.querySelector('#location-picker')
+        })
+      }
     </script>
 
     {% endblock %}
