--- a/app/views/workallocation/pages/wa-allwork-sp.html
+++ b/app/views/workallocation/pages/wa-allwork-sp.html
@@ -7,11 +7,6 @@
 My work
 {% endblock %}
 {% block content %}
-<style>
-  .govuk-width-container {
-    max-width: 1820px;
-  }
-</style>
 <div class="govuk-width-container">
   <div class="hmcts-page-heading">
     <div class="hmcts-page-heading__title">
@@ -19,8 +14,6 @@ My work
     </div>
   </div>
   <p>View and manage all tasks and cases.</p>
-
-
   <div class="hmcts-scrollable-pane">
     <div class="hmcts-scrollable-pane__wrapper">
       <nav class="hmcts-sub-navigation">
@@ -37,104 +30,128 @@ My work
           </li>
         </ul>
       </nav>
-      <div class="hmcts-filter-layout" >
+      <div class="hmcts-filter-layout">
         <div class="hmcts-filter-layout__filter" style="background-color: #f3f2f1;">
-
           <div class="hmcts-filter__content">
-
-            <div class="hmcts-filter__options" >
-
-
-  <div>
-  <label class="govuk-heading-m" for="sort">
-    Service
-  </label>
-  <select class="govuk-select" id="sort" name="sort" style="width:100%">
-    <option value="published">Value</option>
-    <option value="updated" selected>Immigration and Asylum</option>
-    <option value="views">Value</option>
-    <option value="comments">Value</option>
-  </select>
-<div class="govuk-!-padding-bottom-4"></div>
-
-
-  <label class="govuk-heading-m" for="sort">
-    Case location
-  </label>
-  <select class="govuk-select" id="sort" name="sort" style="width:100%">
-    <option value="published">All locations</option>
-    <option value="updated" selected>Taylor House</option>
-    <option value="views">Value</option>
-    <option value="comments">Value</option>
-  </select>
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  <label class="govuk-heading-m" for="sort">
-    Task type
-  </label>
-  <select class="govuk-select" id="sort" name="sort" style="width:100%">
-    <option value="updated" selected>Judicial tasks</option>
-    <option value="views">Legal ops tasks</option>
-    <option value="comments">Admin</option>
-  </select>
-</div>
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  <form action="#" method="post" onsubmit="usePage(this, 'bob');">
-<div class="govuk-form-group">
-  <fieldset class="govuk-fieldset">
-    <label class="govuk-heading-m" for="sort">
-      Person
-    </label>
-    <div class="govuk-radios" >
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="person" name="bob" type="radio" value="/workallocation/pages/wa-allwork" >
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          All
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="person-2" name="bob" type="radio" value="/workallocation/pages/wa-allwork-none">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          None / Available tasks
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="person-3" name="bob" type="radio" value="/workallocation/pages/wa-allwork-sp-y" checked="true">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          Specific person
-        </label>
-      </div>
-  <div class="govuk-!-padding-bottom-2"></div>
-      <div class="govuk-form-group">
-          <input class="govuk-input" id="address-town" name="address-town" type="text" value="Judge Beech (judge.beech@eJudiciary.co.uk)">
-      </div>
-
-    </div>
-
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
-    <!--
-        <label class="govuk-heading-m" for="sort">
-          Priority
-        </label>
-        <select class="govuk-select" id="sort" name="sort" style="width:100%">
-          <option value="updated" selected>All</option>
-          <option value="views">Urgent (red)</option>
-          <option value="views">Due (yellow)</option>
-          <option value="comments">New (grey)</option>
-        </select>
-    -->
-      </div>
-      <!--
-      <div class="govuk-!-padding-bottom-1"></div>
-    -->
-
-              <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
-                Apply
-              </button>
-              <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Reset to default
-              </button>
-            </div>
+            <div class="hmcts-filter__options">
+              <div>
+                <label class="govuk-heading-m" for="sort">
+                  Service
+                </label>
+                <select class="govuk-select" id="sort" name="sort" style="width:100%">
+                  <option value="published">Value</option>
+                  <option value="updated" selected>Immigration and Asylum</option>
+                  <option value="views">Value</option>
+                  <option value="comments">Value</option>
+                </select>
+                <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+                <p class="govuk-heading-m">Select a location</p>
+                <div class="govuk-radios" >
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="person" name="bob" type="radio" value="/workallocation/pages/wa-allwork">
+                    <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+                      All
+                    </label>
+                  </div>
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="person-3" name="bob" type="radio" value="/workallocation/pages/wa-allwork-sp" checked>
+                    <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+                      Search for a location
+                    </label>
+                  </div>
+                <div class="govuk-!-padding-bottom-2"></div>
+                <div style="width:100%;display:inline-block;">
+                  <label class="govuk-body" for="location-picker" style="display:none;">
+                    Search for a location by name
+                  </label>
+                  <select id="location-picker" name="locationPicker" autofocus style="background-color:white;">
+                    <option value="Taylor House Tribunal Hearing Centre" {% if data.locationPicker == 'Taylor House Tribunal Hearing Centre' %} selected {% endif %}>Taylor House Tribunal Hearing Centre</option>
+                    <option value="Birmingham Civil and Family Justice Centre" {% if data.locationPicker == 'Birmingham Civil and Family Justice Centre' %} selected {% endif %}>Birmingham Civil and Family Justice Centre</option>
+                    <option value="Bradford Tribunal Hearing Centre" {% if data.locationPicker == 'Bradford Tribunal Hearing Centre' %} selected {% endif %}>Bradford Tribunal Hearing Centre</option>
+                    <option value="Glasgow Tribunals Centre" {% if data.locationPicker == 'Glasgow Tribunals Centre' %} selected {% endif %}>Glasgow Tribunals Centre</option>
+                    <option value="Hatton Cross Tribunal Hearing Centre" {% if data.locationPicker == 'Hatton Cross Tribunal Hearing Centre' %} selected {% endif %}>Hatton Cross Tribunal Hearing Centre</option>
+                    <option value="Manchester Tribunal Hearing Centre" {% if data.locationPicker == 'Manchester Tribunal Hearing Centre' %} selected {% endif %}>Manchester Tribunal Hearing Centre</option>
+                    <option value="Newcastle Civil & Family Courts and Tribunals Centre" {% if data.locationPicker == 'Newcastle Civil & Family Courts and Tribunals Centre' %} selected {% endif %}>Newcastle Civil & Family Courts and Tribunals Centre</option>
+                    <option value="Newport (South Wales) Immigration and Asylum Tribunal" {% if data.locationPicker == 'Newport (South Wales) Immigration and Asylum Tribunal' %} selected {% endif %}>Newport (South Wales) Immigration and Asylum Tribunal</option>
+                    <option value="Taylor House Tribunal Hearing Centre" {% if data.locationPicker == 'Taylor House Tribunal Hearing Centre' %} selected {% endif %}>Taylor House Tribunal Hearing Centre</option>
+                  </select>
+                  </div>
+                </div>
+              </div>
+              <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+              <form action="#" method="post" onsubmit="usePage(this, 'bob');">
+                <div class="govuk-form-group">
+                  <fieldset class="govuk-fieldset">
+                  <label class="govuk-heading-m" for="sort">
+                    Person
+                  </label>
+                  <div class="govuk-radios">
+                    <div class="govuk-radios__item">
+                      <input class="govuk-radios__input" id="person" name="bob" type="radio" value="/workallocation/pages/wa-allwork">
+                      <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+                        All
+                      </label>
+                    </div>
+                    <div class="govuk-radios__item">
+                      <input class="govuk-radios__input" id="person-2" name="bob" type="radio" value="/workallocation/pages/wa-allwork-none">
+                      <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+                        None / Available tasks
+                      </label>
+                    </div>
+                    <div class="govuk-radios__item">
+                      <input class="govuk-radios__input" id="person-3" name="bob" type="radio" value="/workallocation/pages/wa-allwork-sp-y" checked="true">
+                      <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+                        Specific person
+                      </label>
+                    </div>
+                    <label class="govuk-heading-m" for="sort" style="display:none">
+                      Label for Specific person
+                    </label>
+                    <div class="govuk-!-padding-bottom-2"></div>
+                    <select class="govuk-select" id="sort" name="sort" style="width:100%">
+                      <option value="updated">Select role type</option>
+                      <option value="updated" selected>Judiciary</option>
+                      <option value="views">Legal ops tasks</option>
+                      <option value="comments">Admin</option>
+                    </select>
+                    <div class="govuk-!-padding-bottom-2"></div>
+                    <div class="govuk-form-group">
+                      <input class="govuk-input" id="address-town" name="address-town" type="text" value="Judge Beech (judge.beech@eJudiciary.co.uk)">
+                    </div>
+                  </div>
+                </div>
+                <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+                <div class="govuk-form-group">
+                <label class="govuk-heading-m" for="sort">
+                  Task type
+                </label>
+                <select class="govuk-select" id="sort" name="sort" style="width:100%">
+                  <option value="updated">All</option>
+                  <option value="updated" selected>Judicial tasks</option>
+                  <option value="views">Legal ops tasks</option>
+                  <option value="comments">Admin</option>
+                </select>
+                <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+                </div>
+                <div class="govuk-form-group">
+                <label class="govuk-heading-m" for="sort">
+                  Priority
+                </label>
+                <select class="govuk-select" id="sort" name="sort" style="width:100%">
+                  <option value="updated" selected>All</option>
+                  <option value="views">High (red)</option>
+                  <option value="comments">Medium (yellow)</option>
+                  <option value="comments">Low (green)</option>
+                </select>
+                </div>
+                <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+                <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
+                  Apply
+                </button>
+                <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                  Reset to default
+                </button>
+              </div>
           </div>
         </div>
         <div class="hmcts-filter-layout__content">
@@ -153,8 +170,6 @@ My work
               </tr>
             </thead>
             <tbody class="govuk-table__body">
-
-
               <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Libby Mcmahon</a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
@@ -165,9 +180,6 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
-
-
-
               <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Talha Awan</a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
@@ -175,10 +187,9 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review FTPA application</a></td>
                 <td class="govuk-table__cell"> {{ now |  date("subtract", 2, "day") | date( "D MMMM YYYY" ) }}</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
-
               <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
@@ -186,24 +197,21 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review application decision</a></td>
                 <td class="govuk-table__cell"> {{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}  </td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
-
-
               <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
-                    style="fill: black">
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path style="fill: black">
                     <title>This case has more than one task. Review needed.</title>
                     <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
                                               C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
                   </svg></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Generate decision and reasons</a></td>
                 <td class="govuk-table__cell">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}  </td>
-                                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="wa-allwork-sp-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
             </tbody>
@@ -213,11 +221,19 @@ My work
     </div>
     </form>
     <script type="text/javascript">
-    function usePage(frm,nm){
-    for (var i_tem = 0, bobs=frm.elements; i_tem < bobs.length; i_tem++)
-    if(bobs[i_tem].name==nm&&bobs[i_tem].checked)
-    frm.action=bobs[i_tem].value;
-    }
+      function usePage(frm,nm){
+        for (var i_tem = 0, bobs=frm.elements; i_tem < bobs.length; i_tem++)
+        if(bobs[i_tem].name==nm&&bobs[i_tem].checked)
+        frm.action=bobs[i_tem].value;
+      }
+    </script>
+
+    <script type="text/javascript">
+      window.onload = (event) => {
+        accessibleAutocomplete.enhanceSelectElement({
+          selectElement: document.querySelector('#location-picker')
+        })
+      }
     </script>
 
     {% endblock %}
